crud of modules added
